// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  border-style: solid;
  border-radius: 0.25rem;
  border-width: 1px;
  box-shadow: 0 4px 32px 0 rgb(10 14 29 / 2%),0 8px 64px 0 rgb(10 14 29 / 8%);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-color: #1a8385;
}

.c1 {
  font-size: 1rem;
  font-weight: 500;
  font-family: Roboto,sans-serif;
  line-height: 1.25;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
  color: #1a8385;
}

.c2 {
  font-size: 1.875rem;
  font-weight: 400;
  font-family: Roboto,sans-serif;
  line-height: 1.625;
  color: #292B3E;
}

@media only screen and (min-width:1024px) {
  .c2 {
    font-size: 2.25rem;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
  />
  <div
    class=""
  >
    <div
      class="c2"
    >
      £
      0.00
    </div>
  </div>
</div>
`;

exports[`it works with different kind 1`] = `
.c0 {
  border-style: solid;
  border-radius: 0.25rem;
  border-width: 1px;
  box-shadow: 0 4px 32px 0 rgb(10 14 29 / 2%),0 8px 64px 0 rgb(10 14 29 / 8%);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-color: #937032;
}

.c1 {
  font-size: 1rem;
  font-weight: 500;
  font-family: Roboto,sans-serif;
  line-height: 1.25;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
  color: #937032;
}

.c2 {
  font-size: 1.875rem;
  font-weight: 400;
  font-family: Roboto,sans-serif;
  line-height: 1.625;
  color: #292B3E;
}

@media only screen and (min-width:1024px) {
  .c2 {
    font-size: 2.25rem;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
  />
  <div
    class=""
  >
    <div
      class="c2"
    >
      £
      0.00
    </div>
  </div>
</div>
`;

exports[`it works with different symbol 1`] = `
.c0 {
  border-style: solid;
  border-radius: 0.25rem;
  border-width: 1px;
  box-shadow: 0 4px 32px 0 rgb(10 14 29 / 2%),0 8px 64px 0 rgb(10 14 29 / 8%);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-color: #937032;
}

.c1 {
  font-size: 1rem;
  font-weight: 500;
  font-family: Roboto,sans-serif;
  line-height: 1.25;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
  color: #937032;
}

.c2 {
  font-size: 1.875rem;
  font-weight: 400;
  font-family: Roboto,sans-serif;
  line-height: 1.625;
  color: #292B3E;
}

@media only screen and (min-width:1024px) {
  .c2 {
    font-size: 2.25rem;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    test heading
  </h1>
  <div
    class=""
  >
    <div
      class="c2"
    >
      33.30
      %
    </div>
  </div>
</div>
`;

exports[`it works with heading and value 1`] = `
.c0 {
  border-style: solid;
  border-radius: 0.25rem;
  border-width: 1px;
  box-shadow: 0 4px 32px 0 rgb(10 14 29 / 2%),0 8px 64px 0 rgb(10 14 29 / 8%);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-color: #937032;
}

.c1 {
  font-size: 1rem;
  font-weight: 500;
  font-family: Roboto,sans-serif;
  line-height: 1.25;
  padding-top: 0.5rem;
  padding-bottom: 1rem;
  color: #937032;
}

.c2 {
  font-size: 1.875rem;
  font-weight: 400;
  font-family: Roboto,sans-serif;
  line-height: 1.625;
  color: #292B3E;
}

@media only screen and (min-width:1024px) {
  .c2 {
    font-size: 2.25rem;
  }
}

<div
  class="c0"
>
  <h1
    class="c1"
  >
    test heading
  </h1>
  <div
    class=""
  >
    <div
      class="c2"
    >
      £
      34,823.30
    </div>
  </div>
</div>
`;
